--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ development:
   smtp_address: smtp.gmail.com:587
   smtp_host: smtp.gmail.com
   email_queue: email_q
+  email_sender_worker: 5
 
 local:
   rabbitmq_uri:           amqp://admin:admin@localhost:5672/
@@ -13,6 +14,7 @@ local:
   smtp_address: smtp.gmail.com:587
   smtp_host: smtp.gmail.com
   email_queue: email_q
+  email_sender_worker: 5
 
 production:
   rabbitmq_uri:           amqp://admin:admin@localhost:5672/
@@ -21,3 +23,4 @@ production:
   smtp_address: smtp.gmail.com:587
   smtp_host: smtp.gmail.com
   email_queue: email_q
+  email_sender_worker: 5
