add docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2
 jobs:
   build:
+    docker:
+          # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
+          - image: circleci/golang:1.9
+
     working_directory: /go/src/github.com/andrisasuke/rabbitmq-demo
 
     steps:
