--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
           # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
           - image: circleci/golang:1.9
 
-    working_directory: /go/src/github.com/andrisasuke/rabbitmq-demo
+    working_directory: /go/src/rabbitmq-demo
 
     steps:
           - checkout
