add store artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,8 @@ jobs:
           - checkout
           - run: go get
           - run: go build
+          - run: make
+          - store_artifacts:
+                    path: /tmp/test-results
+                    destination: raw-test-output
+
