--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
           - run: go get
           - run: go build
           - store_artifacts:
-                    path: /go/src/rabbitmq-demo
-                    destination: raw-test-output
+                    path: /go/src/rabbitmq-demo/rabbitmq-demo
+                    destination: builds
 
