--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 development:
-  rabbitmq_uri:           amqp://admin:admin@localhost:5672/
+  rabbitmq_uri:           amqp://guest:guest@localhost:5672/
   smtp_user_account: dev_xxx@gmail.com
   smtp_user_password: dev_pasword
   smtp_address: smtp.gmail.com:587
@@ -8,7 +8,7 @@ development:
   email_sender_worker: 5
 
 local:
-  rabbitmq_uri:           amqp://admin:admin@localhost:5672/
+  rabbitmq_uri:           amqp://guest:guest@localhost:5672/
   smtp_user_account: test_xxx@gmail.com
   smtp_user_password: test_pasword
   smtp_address: smtp.gmail.com:587
@@ -17,7 +17,7 @@ local:
   email_sender_worker: 5
 
 production:
-  rabbitmq_uri:           amqp://admin:admin@localhost:5672/
+  rabbitmq_uri:           amqp://guest:guest@localhost:5672/
   smtp_user_account: dev_xxx@gmail.com
   smtp_user_password: prod_password
   smtp_address: smtp.gmail.com:587
